@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [mms] Rate-limit filters drag/drop changes to prevent race conditions (Bug #13819).
 * [mms] Fix filter drag/drop ordering working in basic view (Bug #13820).
 * [mms] Maildir requires UTF7-IMAP encoding for folder names (Bug #13378).
  </notes>
@@ -1536,6 +1537,7 @@
    <date>2014-12-03</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
+* [mms] Rate-limit filters drag/drop changes to prevent race conditions (Bug #13819).
 * [mms] Fix filter drag/drop ordering working in basic view (Bug #13820).
 * [mms] Maildir requires UTF7-IMAP encoding for folder names (Bug #13378).
    </notes>
